Fix del dark mode en prods

--- a/sass/_productos.scss
+++ b/sass/_productos.scss
@@ -457,3 +457,9 @@ h2 {
     }
     
 }
+
+.shopping-cart {
+    body.dark &{
+        color: $blanco;
+        }
+}
